--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,49 @@
 	<name>SOFT-IoT-IoT-Service</name>
 	<artifactId>soft-iot-iot-service</artifactId>
 	<description>Module of SOFT-IoT plataform to implement RESTful IoT Services to access data sensor from connected devices.</description>
-	<groupId>br.ufba.dcc.wiser.soft_iot</groupId>
-	<version>1.0.0</version>
+	<groupId>io.github.larsid</groupId>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
+
+    <url>https://github.com/larsid/soft-iot-iot-service</url>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Uellington Damasceno</name>
+            <email>udamasceno@ecomp.uefs.br</email>
+            <organization>LARSID</organization>
+            <organizationUrl>https://github.com/larsid/</organizationUrl>
+        </developer>
+        <developer>
+            <name>Allan Capistrano de Santana Santos</name>
+            <email>asantos@ecomp.uefs.br</email>
+            <organization>LARSID</organization>
+            <organizationUrl>https://github.com/larsid/</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/larsid/soft-iot-iot-service.git</connection>
+        <developerConnection>scm:git:ssh://github.com:larsid/soft-iot-iot-service.git</developerConnection>
+        <url>http://github.com/larsid/soft-iot-iot-service/tree/master</url>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,62 +78,60 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<!-- explicitly define maven-deploy-plugin after other to force exec 
-					order -->
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
-				<executions>
-					<execution>
-						<id>deploy</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                    <id>sign-artifacts</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>sign</goal>
+                    </goals>
+                    <configuration>
+                        <skip>true</skip>
+                        <keyname>${env.GPG_KEYNAME}</keyname>
+                    </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
+
+    <repositories>
+        <repository>
+            <id>ossrh-snapshots</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 	<!-- Dependencies -->
 
 	<dependencies>
 		<dependency>
-			<groupId>br.ufba.dcc.wiser.soft_iot</groupId>
+			<groupId>io.github.larsid</groupId>
 			<artifactId>soft-iot-mapping-devices</artifactId>
-			<version>1.0.0</version>
+			<version>1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>br.ufba.dcc.wiser.soft_iot</groupId>
+			<groupId>io.github.larsid</groupId>
 			<artifactId>soft-iot-local-storage</artifactId>
-			<version>1.0.0</version>
+			<version>1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -236,16 +274,4 @@
 		</profile>
 	</profiles>
 
-	<!-- Distribution specifications -->
-
-	<distributionManagement>
-		<repository>
-			<id>release-repo</id>
-			<url>https://github.com/WiserUFBA/wiser-mvn-repo/raw/master/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshot-repo</id>
-			<url>https://github.com/WiserUFBA/wiser-mvn-repo/raw/master/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
 </project>
