chore: change repo_token

--- a/.github/workflows/build-bundle.yml
+++ b/.github/workflows/build-bundle.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Automatic Releases
         uses: marvinpinto/action-automatic-releases@v1.2.1
         with:
-          repo_token: "${{ secrets.TOKEN }}"
+          repo_token: "${{ secrets.BUILD_BUNDLE_TOKEN }}"
           prerelease: false
           files: |
             target/*.jar
